Updating board membership.

--- a/Board.htm
+++ b/Board.htm
@@ -128,105 +128,39 @@ if(MSFPhover) { MSFPnav10n=MSFPpreload("_derived/Twin Creeks faq.htm_cmp_ice1740
 		<p align="center">
 		&nbsp;</p>
 		<p align="center"><b>
-		<font face="Verdana" size="3" color="#336699">2010 - 2011 Board of 
+		<font face="Verdana" size="3" color="#336699">2012-2013 Board of 
 		Directors</font></b></p>
 		<div align="center">
-			<table border="2" cellpadding="2" style="padding: 2px" width="576" bordercolordark="#999999" bordercolorlight="#999999">
+			<table border="2" cellpadding="2" style="padding: 2px" bordercolordark="#999999" bordercolorlight="#999999">
 				<tr>
-					<td align="center" width="190">
+					<td align="center">
 					<span style="text-transform: uppercase">
 					<font color="#0000FF"><b>
 					<img border="0" src="DSCN2818.JPG" width="175" height="157"></b></font></span><p>&nbsp;</p>
 					<p><span style="text-transform: uppercase">
-					<font color="#0000FF"><b>President</b></font></span></p>
+					<font color="#0000FF"><b>Wyatt Smith</b></font></span></p>
 					<p><b>President</b></p>
-					<p><a href="mailto:president@twincreekshoa.com">president@twincreekshoa.com</a></td>
-					<td align="center" width="171">
-					<p>
-					<img border="0" src="NoImage.jpg" width="125" height="156"></p>
-					<p><span style="text-transform: uppercase">
-					<b>
-					<font color="#0000FF">Vice-President</font></b></span></p>
-					<p><span style="text-transform: uppercase">
-					<font color="#0000FF"><b>Brookstone</b></font></span></p>
-					<p>
-					<font size="2" face="sans-serif"><b>Clarence Clark</b>&nbsp;
-					</font>&nbsp;</p>
-					<p><a href="mailto:vp1@twincreekshoa.com">vp1@twincreekshoa.com</a></td>
+					<p><a href="mailto:wyattsmt@aol.com">wyattsmt@aol.com</a></td>
 					<td align="center">
 					<img border="0" src="DSCN6669%20copy.jpg" width="175" height="147"><p>&nbsp;</p>
 					<p><span style="text-transform: uppercase"><b>
-					<font color="#0000FF">Vice-President Fieldstone</font></b></span></p>
+					<font color="#0000FF">Charles Young</font></b></span></p>
 					<p>
-					<b>Charles Young</b></p>
-					<p><a href="mailto:vp2@twincreekshoa.com">vp2@twincreekshoa.com</a></td>
+					<b>Vice-President</b></p>
+					<p><a href="mailto:cey99@comcast.net">cey99@comcast.net</a></td>
 				</tr>
-			</table>
-			<p>&nbsp;</p>
-			<table border="1" width="402" cellpadding="2" bordercolordark="#999999" bordercolorlight="#999999">
-				<tr>
-					<td align="center" width="193">
-					<p>
-					<img border="0" src="NoImage.jpg" width="125" height="156"></p>
-					<p>&nbsp;</p>
-					<p><span style="text-transform: uppercase">
-					<font color="#0000FF"><b>TREASUER</b></font></span></p>
-					<p>
-					<font size="2" face="sans-serif"><b>Clarence Abernathy</b></font><p>
-					<a href="mailto:secretary@twincreekshoa.com">
-					secretary@twincreekshoa.com</a></td>
-					<td align="center" width="193">
-					<span style="text-transform: uppercase"><b>
-					<font color="#0000FF">
-					<img border="0" src="DSCN2820.JPG" width="175" height="157"></font></b></span><p>&nbsp;</p>
-					<p><span style="text-transform: uppercase"><b>
-					<font color="#0000FF">Secretary</font></b></span></p>
-					<p><b>Ed 
-					Parada</b><p>
-					<a href="mailto:secretary@twincreekshoa.com">
-					secretary@twincreekshoa.com</a></td>
-					<td align="center">
-					<p>
-					<img border="0" src="NoImage.jpg" width="125" height="156"></p>
-					<p>&nbsp;</p>
-					<p><span style="text-transform: uppercase">
-					<font color="#0000FF"><b>Alternate</b></font></span></p>
-					<p>
-					<b><font face="sans-serif">Charles Spencer</font></b><p>
-					<a href="mailto:treasurer@twincreekshoa.com">alternate@twincreekshoa.com</a></td>
-				</tr>
-			</table>
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
-			<p align="left"><font color="#FF0000"><b>
-			<font face="sans-serif" size="2">We need volunteers for the 
-			Architectural Committee, time commitment is minimal. &nbsp;Please contact 
-			the secretary at the above email link.</font> </b></font><br>
-&nbsp;</p>
-			<p><b>
-		<font face="Verdana" size="3" color="#336699">2010 - 2011 Committees</font></b></p>
-			<table border="2" cellpadding="2" style="padding: 2px" width="576" bordercolordark="#999999" bordercolorlight="#999999">
-				<tr>
-					<td align="center" width="190">
-					<span style="text-transform: uppercase">
-					<font color="#0000FF"><b>Architectural</b></font></span><p>
-					<b>Committee</b></p>
-					<p><a href="mailto:architectural@twincreekshoa.com">
-					architectural@twincreekshoa.com</a></td>
-					<td align="center" width="180">
-					<span style="text-transform: uppercase">
-					<font color="#0000FF"><b>Social</b></font></span><p>
-					<b>Committee</b></p>
-					<p><a href="mailto:social@twincreekshoa.com">social@twincreekshoa.com</a></td>
-					<td align="center" width="191">
-					<span style="text-transform: uppercase">
-					<font color="#0000FF"><b>Crime Watch</b></font></span><p>
-					<font color="#000000"><b>Chairperson</b></font></p>
-					<p><a href="mailto:crimewatch@twincreekshoa.com">crimewatch@twincreekshoa.com</a></td>
-				</tr>
-			</table>
-			<p>&nbsp;<p>Committees forming for 2009, please
-			<a title="Volunteers" href="mailto:secretary@twincreekshoa.com">email the secretary</a> if you are interested in volunteering.<p>&nbsp;</div>
+				</table>
+
+			<dl>
+				<dt>Treasurer</dt>
+				<dd><b>Rod Coffee</b> (<a href="mailto:rodcof@att.net">rodcof@att.net</a>)</dd>
+				
+				<dt>Board Member</dt>
+				<dd><b>Charles Spencer</b> (<a href="mailto:cspencer37@gmail.com">cspencer37@gmail.com</a>)</dd>
+			</dl>
+
+		<p>We need volunteers for the Architectural, Social, and Crime Watch committees.  Please <a href="mailto:wyattsmt@aol.com?subject=TCHOA_Volunteer">email us</a> if you're interested in volunteering.</p>
+
 		</td>
 		<td background="images/rightbg.gif">&nbsp;</td>
 	</tr>
