Switching email addresses on old domain over to Wyatt's.
Sorry Wyatt.  We'll figure out who should get what later.

--- a/Crime Watch.htm
+++ b/Crime Watch.htm
@@ -232,8 +232,8 @@ v:shapes="_x0000_s1028"></span><![endif]></p>
 								(of course after notifying the police, as 
 								appropriate). Alternatively, the information can 
 								be sent to
-								<a href="mailto:crimewatch@twincreekshoa.com?subject=Crime Watch">
-								crimewatch@twincreekshoa.com</a>.</span></p>
+								<a href="mailto:wyattsmt@aol.com?subject=Crime Watch">
+								wyattsmt@aol.com</a>.</span></p>
 								<p class="MsoNormal" style="text-align: justify; text-indent: -.25in; margin-left: .25in; margin-right: 20px">&nbsp;</p>
 								<p class="MsoNormal" style="text-align: justify; text-indent: -.25in; margin-left: .25in; margin-right: 20px">
 								<span style="font-size: 11.0pt">2.<span style="font:7.0pt &quot;Times New Roman&quot;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>The 
@@ -299,8 +299,8 @@ v:shapes="_x0000_s1028"></span><![endif]></p>
 								rewarding, as it enhances the quality of life 
 								and property values in our community. <b><i>Any 
 								willing volunteers should contact </i>
-								<a href="mailto:crimewatch@twincreekshoa.com?subject=Crime Watch">
-								crimewatch@twincreekshoa.com</a><i>.</i></b></span></p>
+								<a href="mailto:wyattsmt@aol.com?subject=Crime Watch">
+								wyattsmt@aol.com</a><i>.</i></b></span></p>
 								<p class="MsoNormal" style="text-align: justify; margin-right: 20px">
 								<span style="font-size: 11.0pt">&nbsp;</span></p>
 								<h3 style="margin-right: 20px">
