--- a/Events.htm
+++ b/Events.htm
@@ -521,7 +521,7 @@ Honorable mention was 6509 Stonecreek Court</font></p><p>&nbsp;</p>
 			<p align="center"><b>Volunteers Needed</b></div>
 		<div>
 			<p align="center">&nbsp;</p>
-			<p align="center">&nbsp;<a title="Lighting Work Group" href="mailto:lighting@twincreekshoa.com?subject=Lighting Work Group"><img border="0" src="Email%20Button.gif" width="97" height="35"></a></p>
+			<p align="center">&nbsp;<a title="Lighting Work Group" href="mailto:wyattsmt@aol.com?subject=Lighting Work Group"><img border="0" src="Email%20Button.gif" width="97" height="35"></a></p>
 			</div>
 					</td>
 					<td>
@@ -534,7 +534,7 @@ Honorable mention was 6509 Stonecreek Court</font></p><p>&nbsp;</p>
 					</div>
 		<div>
 			<p align="center">
-			<a title="Lighting Work Group" href="mailto:landscape@twincreekshoa.com?subject=Landscape Work Group">
+			<a title="Lighting Work Group" href="mailto:wyattsmt@aol.com?subject=Landscape Work Group">
 								<img border="0" src="Email%20Button.gif" width="97" height="35"></a></div>
 					</td>
 				</tr>
@@ -586,7 +586,7 @@ Honorable mention was 6509 Stonecreek Court</font></p><p>&nbsp;</p>
 								this page, please click on the link below.</p>
 								<p>&nbsp;</p>
 								<p align="center">
-								<a title="Volunteers" href="mailto:secretary@twincreekshoa.com?subject=Committees">
+								<a title="Volunteers" href="mailto:wyattsmt@aol.com?subject=Committees">
 								<img border="0" src="help%20wanted.jpg" width="100" height="61"></a></p>
 								<h3><font face="Arial" color="#008080" size="3">
 								<b>&nbsp;&nbsp;&nbsp;<br>
@@ -669,7 +669,7 @@ Honorable mention was 6509 Stonecreek Court</font></p><p>&nbsp;</p>
 								we would like to concentrate on. We need your 
 								ideas and participation. Send us an
 								</font>
-								<a href="mailto:president@twincreekshoa.com?subject=Committees">
+								<a href="mailto:wyattsmt@aol.com?subject=Committees">
 								<font color="#008080">email</font></a><font color="#008080"> or give us a call...we look forward to 
 								hearing your thoughts! </font></b> </p>
 								<p><font face="Arial" size="2">&nbsp;&nbsp;</font> </p>
