--- a/Resources.htm
+++ b/Resources.htm
@@ -142,7 +142,7 @@ if(MSFPhover) { MSFPnav10n=MSFPpreload("_derived/Twin Creeks faq.htm_cmp_ice1740
 		or alteration that is not in accordance with the original house plans 
 		must </span>be pre-approved by sending in an
 		<a href="2009%20Arch%20Form.pdf">Architectural Approval Form</a>. 
-		Please <a href="mailto:president@twincreekshoa.com">email the Board</a> 
+		Please <a href="mailto:wyattsmt@aol.com">email the Board</a> 
 		with any questions prior to beginning repairs or alterations.</p>
 		<p>&nbsp;</p>
 		<p align="center"><span style="text-transform: uppercase"><b>
@@ -285,7 +285,7 @@ if(MSFPhover) { MSFPnav10n=MSFPpreload("_derived/Twin Creeks faq.htm_cmp_ice1740
 			for Mailboxes and Mailbox Posts. The price for our community is $66&nbsp; 
 			plus tax and $15 for installation. You can also contact Joe Peeler 
 			at 255-2500 for post installation. Please feel free to
-			<a href="mailto:president@twincreekshoa.com">email the Board</a> if 
+			<a href="mailto:wyattsmt@aol.com">email the Board</a> if 
 			you have any questions or need additional information.</span></font></p>
 			<p align="left">&nbsp;</p>
 			<p class="MsoNormal" align="center" style="text-align:center"><b>
@@ -496,7 +496,7 @@ src="Resources_files/image004.jpg" v:shapes="_x0000_s1025"><![endif]></span></p>
 				to assist with neighborhood activities please click on the 
 				following link:</p>
 				<p align="center" style="margin-top: 4px; margin-left:10px">
-				<a title="Classifieds Request" href="mailto:secretary@twincreekshoa.com">
+				<a title="Classifieds Request" href="mailto:wyattsmt@aol.com">
 								<img border="0" src="Email%20Button.gif" width="97" height="35"></a></td>
 			</tr>
 		</table>
