--- a/Twin Creeks faq.htm
+++ b/Twin Creeks faq.htm
@@ -220,7 +220,7 @@ if(MSFPhover) { MSFPnav10n=MSFPpreload("_derived/Registration Page.htm_cmp_ice17
 				subject field.</p>
 				<p align="left" style="margin-left: 3px">&nbsp;</p>
 				<p align="center" style="margin-left: 3px">
-				<a title="FAQ Request" href="mailto:board@twincreekshoa.com?subject=FAQ">
+				<a title="FAQ Request" href="mailto:wyattsmt@aol.com?subject=FAQ">
 				<img border="0" src="EmailButton.gif" width="97" height="35"></a></p>
 				<p align="center" style="margin-left: 3px">&nbsp;</p>
 				<p align="left" style="margin-left: 3px"><b>
@@ -234,7 +234,7 @@ if(MSFPhover) { MSFPnav10n=MSFPpreload("_derived/Registration Page.htm_cmp_ice17
 				interested please click on the following link.</p>
 				<p align="left" style="margin-left: 3px">&nbsp;</p>
 				<p align="center" style="margin-left: 3px">
-				<a href="mailto:secretary@twincreekshoa.com?subject=Committees">
+				<a href="mailto:wyattsmt@aol.com?subject=Committees">
 				<img border="0" src="help%20wanted.jpg" width="100" height="61"></a></p>
 				<p style="margin-left: 3px">&nbsp;</p>
 				<p style="margin-left: 3px">&nbsp;</p>
