--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ if(MSFPhover) { MSFPnav11n=MSFPpreload("_derived/Twin Creeks faq.htm_cmp_ice1740
 		<p align="left">
 		Our community website was developed to serve as an informative resource 
 		for both Brookstone and Fieldstone communities. Please feel free to
-		<a href="mailto:secretary@twincreekshoa.com">contact us</a> with your comments 
+		<a href="mailto:wyattsmt@aol.com">contact us</a> with your comments 
 		and suggestions.</p>
 		<p align="left">
 		&nbsp;</p>
