--- a/About Us.htm
+++ b/About Us.htm
@@ -180,7 +180,7 @@ v:shapes="_x0000_s1026"></span><![endif]></p>
 				subject field.</p>
 				<p align="left" style="margin-left: 3px">&nbsp;</p>
 				<p align="center" style="margin-left: 3px">
-				<a title="FAQ Request" href="mailto:board@twincreekshoa.com?subject=FAQ">
+				<a title="FAQ Request" href="mailto:wyattsmt@aol.com?subject=FAQ">
 				<img border="0" src="EmailButton.gif" width="97" height="35"></a></p>
 				<p align="left" style="margin-left: 3px">&nbsp;</p>
 				<p align="left" style="margin-left: 3px"><b><font size="3">
@@ -189,7 +189,7 @@ v:shapes="_x0000_s1026"></span><![endif]></p>
 				interested please click on the following link.</p>
 				<p align="left" style="margin-left: 3px">&nbsp;</p>
 				<p align="center" style="margin-left: 3px">
-				<a href="mailto:secretary@twincreekshoa.com?subject=Committees">
+				<a href="mailto:wyattsmt@aol.com?subject=Committees">
 				<img border="0" src="help%20wanted.jpg" width="100" height="61"></a></p>
 				<p style="margin-left: 3px">&nbsp;</td>
 			</tr>
