Turning off left navigation hover.  Was broken after the migration anyway.

--- a/Board.htm
+++ b/Board.htm
@@ -95,6 +95,7 @@ function MSFPpreload(img)
 {
   var a=new Image(); a.src=img; return a; 
 }
+MSFPhover = false;
 // --></script><script language="JavaScript"><!--
 if(MSFPhover) { MSFPnav1n=MSFPpreload("_derived/home_cmp_ice174010_vbtn.gif"); MSFPnav1h=MSFPpreload("_derived/home_cmp_ice174010_vbtn_a.gif"); }
 // --></script><a href="./" language="JavaScript" onmouseover="if(MSFPhover) document['MSFPnav1'].src=MSFPnav1h.src" onmouseout="if(MSFPhover) document['MSFPnav1'].src=MSFPnav1n.src"><img src="_derived/home_cmp_ice174010_vbtn.gif" width="147" height="31" border="0" alt="Home" name="MSFPnav1"></a><br><script language="JavaScript"><!--
