Updating property management names and URLs.

--- a/index.html
+++ b/index.html
@@ -355,14 +355,8 @@ Form</a></font></p>
 <p>&nbsp;</p>
 <p><font face="sans-serif" size="2">Contact information is as follows:</font></p>
 <p align="center"><font face="sans-serif" size="2">
-<a href="http://www.ekirkpatrick.com/Content.htm">Kirkpatrick Management Company</a></font></p>
-<p align="center"><font face="sans-serif" size="2">Ryan Naylor 317-594-5720 ext 
-52</font></p>
-<p align="center"><font face="sans-serif" size="2">
-<a href="mailto:rnaylor@ekirkpatrick.com">rnaylor@ekirkpatrick.com</a> </font></p>
-<p align="center"><font face="sans-serif" size="2">
-<a href="mailto:tlanders@ekirkpatrick.com">tlanders@ekirkpatrick.com</a> 
-(assistant)</font></p>
+<a href="http://www.ekirkpatrick.com/">Kirkpatrick Management Company</a></font></p>
+<p align="center"><font face="sans-serif" size="2">Kevin Patterson 1-800-899-6652</font></p>
 <p align="center"><font face="sans-serif">A</font><font face="sans-serif" size="2">fter-hour 
 emergency number: 317-570-4358. </font></p>
 <p>&nbsp;</p>
@@ -372,7 +366,7 @@ emergency number: 317-570-4358. </font></p>
 chosen Kirkpatrick to be the management company for our neighborhood. </font>For 
 additional information, please visit:</p>
 <p align="center"><font face="sans-serif" size="2">
-<a href="http://www.ekirkpatrick.com/Content.htm">www.ekirkpatrick.com</a></font></p>
+<a href="http://www.ekirkpatrick.com/">www.ekirkpatrick.com</a></font></p>
 <div>
 	<font size="2">
 	<p style="margin-top: 6px" align="center"><a href="IntroLetter.pdf">
