Twin Creeks Homeowners Association owns the copyright on this site.

--- a/About Us.htm
+++ b/About Us.htm
@@ -215,7 +215,7 @@ v:shapes="_x0000_s1026"></span><![endif]></p>
 		<font color="#FFFFFF">
 		<!--webbot bot="Include" u-include="include/copyright.htm" tag="BODY" startspan -->
 
-<p><font face="Verdana" size="2">Copyright © 2005-2010 KLW's Creative Services</font></p>
+<p><font face="Verdana" size="2">Copyright &copy; Twin Creeks Homeowners Association</font></p>
 </font>
 
 <!--webbot bot="Include" i-checksum="474" endspan --></font></td>
