--- a/Resources.htm
+++ b/Resources.htm
@@ -520,7 +520,7 @@ src="Resources_files/image004.jpg" v:shapes="_x0000_s1025"><![endif]></span></p>
 		<td height="26" bgcolor="#336699" align="center"><font color="#FFFFFF">
 		<!--webbot bot="Include" u-include="include/copyright.htm" tag="BODY" startspan -->
 
-<p><font face="Verdana" size="2">Copyright © 2005-2010 KLW's Creative Services</font></p>
+<p><font face="Verdana" size="2">Copyright &copy; Twin Creeks Homeowners Association</font></p>
 </font>
 
 <!--webbot bot="Include" i-checksum="474" endspan --></font></td>
