--- a/services.htm
+++ b/services.htm
@@ -277,7 +277,7 @@ if(MSFPhover) { MSFPnav12n=MSFPpreload("_derived/Bylaws.htm_cmp_ice174010_vbtn.g
 		<font color="#FFFFFF">
 		<!--webbot bot="Include" u-include="include/copyright.htm" tag="BODY" startspan -->
 
-<p><font face="Verdana" size="2">Copyright © 2005-2010 KLW's Creative Services</font></p>
+<p><font face="Verdana" size="2">Copyright &copy; Twin Creeks Homeowners Association</font></p>
 </font>
 
 <!--webbot bot="Include" i-checksum="474" endspan --></font></td>
