--- a/Crime Watch.htm
+++ b/Crime Watch.htm
@@ -1146,7 +1146,7 @@ Watch Alert</a></b></font></p>
 		<td height="26" bgcolor="#336699" align="center"><font color="#FFFFFF">
 		<!--webbot bot="Include" u-include="include/copyright.htm" tag="BODY" startspan -->
 
-<p><font face="Verdana" size="2">Copyright © 2005-2010 KLW's Creative Services</font></p>
+<p><font face="Verdana" size="2">Copyright &copy; Twin Creeks Homeowners Association</font></p>
 </font>
 
 <!--webbot bot="Include" i-checksum="474" endspan --></font></td>
