--- a/Twin Creeks faq.htm
+++ b/Twin Creeks faq.htm
@@ -273,7 +273,7 @@ if(MSFPhover) { MSFPnav10n=MSFPpreload("_derived/Registration Page.htm_cmp_ice17
 		<font color="#FFFFFF">
 		<!--webbot bot="Include" u-include="include/copyright.htm" tag="BODY" startspan -->
 
-<p><font face="Verdana" size="2">Copyright © 2005-2010 KLW's Creative Services</font></p>
+<p><font face="Verdana" size="2">Copyright &copy; Twin Creeks Homeowners Association</font></p>
 </font>
 
 <!--webbot bot="Include" i-checksum="474" endspan --></font></td>
