Cleaning up About Us content.

--- a/about.html
+++ b/about.html
@@ -3,37 +3,27 @@ layout: inside
 category: about
 title: About Us
 ---
-&nbsp;<p align="center">
-<span style="text-transform: uppercase; font-style:italic"><b>
-<font color="#336699" size="5">~ Welcome Home! ~</font></b></span></p>
-<p align="center"><!--[if gte vml 1]><v:line
-id="_x0000_s1026" style='position:absolute;left:0;text-align:left;top:0;
-z-index:1' from="436.5pt,181.5pt" to="436.5pt,181.5pt"/><![endif]--><![if !vml]><span
-style='mso-ignore:vglayout;position:absolute;z-index:1;left:581px;top:241px;
-width:2px;height:2px'><img width=2 height=2 src="About%20Us_files/image003.gif"
-v:shapes="_x0000_s1026"></span><![endif]></p>
-<!--msthemeseparator--><p align="center"><img src="fp_themes/ice174/bar.gif" width="320" height="4"></p>
-<p align="left">
-<span style="text-transform: uppercase"><b>
-<font size="3" color="#336699">Who we ARE...</font></b></span><img border="0" src="home%201b%20copy.jpg" width="375" height="233" align="right"></p>
-<p>
-<font size="2">Twin Creeks 
-is a wonderful neighborhood located on the Northwest side of Indianapolis, 
+
+<div class="header banner">
+	<h2>~ Welcome Home! ~</h2>
+</div>
+
+<img border="0" src="home%201b%20copy.jpg" width="375" height="233" align="right" alt="">
+
+<h3>Who we are&hellip;</h3>
+
+<p>Twin Creeks is a wonderful neighborhood located on the Northwest side of Indianapolis, 
 Indiana, comprised of two distinct communities: Brookstone and Fieldstone. There 
 are 226 homes in our association, build around 16 acres of beautiful 
 common area that include a wooded preserve, 4 ponds, creeks, community 
 playground, basketball court and nature trail. Each homeowner is 
-entitled to membership.&nbsp;The Association was created and 
-incorporated on January 21, 1993.</font></p>
-<p>
-&nbsp;</p>
-<p align="left">
-<span style="text-transform: uppercase"><font color="#336699" size="3">
-<b>HISTORY...</b></font></span></p>
-<p>
-<span class="text">Estridge developed our neighborhoods between 1992 and 
+entitled to membership.  The Association was created and 
+incorporated on January 21, 1993.</p>
+
+<h3>History&hellip;</h3>
+<p>Estridge developed our neighborhoods between 1992 and 
 1999. The concept was to build two distinct housing areas that shared an 
-expansive common area. </span><font size="2">The 121 homes of Brookstone 
+expansive common area. The 121 homes of Brookstone 
 were carefully designed as single family homes, averaging in&nbsp; size from 
 1200 to 1700 square feet. The developer wanted to take advantage of the 
 unique setting with its meandering streams and gently rolling terrain. 
@@ -45,6 +35,4 @@ living possibilities. The Fieldstone area consisted of 105 homes built
 along the meandering Robin Run creek. There are many basic floor plans 
 for Fieldstone, as well as interior modifications and exterior treatments. The homes 
 range in size from 1975 to 2500 square feet. Most are two-story 
-residences with basements. Some have three car garages. </font>
-</p>
-<p>&nbsp;</p>
+residences with basements. Some have three car garages.</p>
