Reformatting FAQ page.

--- a/faq.html
+++ b/faq.html
@@ -3,87 +3,65 @@ layout: inside
 category: faq
 title: Frequently Asked Questions
 ---
-&nbsp;<p>This page contains 
-answers to common questions you may have as a Twin Creeks homeowner, along with some 
+
+<p>This page contains answers to common questions you may have as a Twin Creeks homeowner, along with some 
 tips and overall general information we have found useful.</p>
-<p>&nbsp;</p>
-<p style="margin-bottom: 6px"><font color="#0000FF"><b>
-<font face="BernhardMod BT" size="4">Q.</font>&nbsp; What is the Twin 
-Creeks Homeowners Association?</b></font></p>
-<p>The Twin Creeks Homeowners Association (TCHOA) was part of the 
-initial housing&nbsp;plan<font size="2">, <a name="q1^">incorporated by 
-the developer to maintain the common areas, provide various services to 
-residents and to control future architectural development. Membership 
-in and payment of annual dues to TCHOA is mandatory for all homeowners. 
-The <em>Declaration of Covenants and Restrictions for Twin Creeks</em> 
-is part of the deed to each lot in Fieldstone and Brookstone. </a>
-</font></p>
-<p>&nbsp;</p>
-<p style="margin-bottom: 6px"><font color="#0000FF"><b>
-<font face="BernhardMod BT" size="4">Q.</font>&nbsp; How much are the 
-annual dues?</b></font></p>
-<p>The annual dues are $321.00 payable every January 1.Late fees are an 
-additional $39.00</p>
-<p>&nbsp;</p>
-<p style="margin-bottom: 6px"><font color="#0000FF"><b>
-<font face="BernhardMod BT" size="4">Q.</font>&nbsp; How are the dues 
-spent?</b></font></p>
-<p>The annual homeowner dues are used to <font size="2"><a name="q12^">
-cover such things as street lighting, mowing and landscaping of common 
-areas, maintenance of retention ponds, maintenance of signage, common 
-area fences and entrance structures, snow removal, insurance, common 
-area property taxes and related administrative expenses.</a></font></p>
-<p>&nbsp;</p>
-<p style="margin-bottom: 6px"><font color="#0000FF"><b>
-<font face="BernhardMod BT" size="4">Q.</font>&nbsp; Is there a Board 
-that handles the business of Twin Creeks Homeowners Association (TCHOA)?</b></font></p>
-<p>Yes. <font size="2"><a name="q6^">The TCHOA Board of Directors are 
-elected each year in May or June at the annual meeting of the homeowners 
-association</a>. Each position is strictly a volunteer commitment from 
-fellow homeowners who are willing to dedicate their time and effort to 
-ensure the proper handling of homeowner business.</font></p>
-<p>&nbsp;</p>
-<p style="margin-bottom: 6px"><font color="#0000FF"><b>
-<font face="BernhardMod BT" size="4">Q.</font>&nbsp; Are there any 
-committees at Twin Creeks and how can I get involved?</b></font></p>
-<p>Yes. The TCHOA welcomes the involvement of all residents. The current 
-committees are as follows: Crime Watch, Architectural Review, Social 
-Committee and Welcome Committee. In addition, we are looking for 
-creative people to start various other neighborhood events, activities 
-and clubs. Each of these committees are looking 
-for volunteers who would like to participate. If you are interested 
-please email the Board.</p>
-<p align="center">
-<a href="mailto:president@teincreekshoa.com?subject=Committee Request">
-<img border="0" src="EmailButton.gif" width="97" height="35"></a></p>
-<p align="center">
-&nbsp;</p>
-<p style="margin-bottom: 6px"><font color="#0000FF"><b>
-<font face="BernhardMod BT" size="4">Q.</font>&nbsp; How can I get more 
-involved in my neighborhood?</b></font></p>
-<p>You can run for a TCHOA Board position, volunteer for a committee or 
-volunteer as a Block Capitan. Please contact any <a href="Board.htm">
-Board Member</a> for more information.</p>
-<p>&nbsp;</p>
-<p style="margin-bottom: 6px"><font color="#0000FF"><b>
-<font face="BernhardMod BT" size="4">Q.</font>&nbsp; Is there a 
-neighborhood newsletter and how frequently is it published?</b></font></p>
-<p>Yes. The <b><i>Twin Creeks Connection</i></b> is in its second year 
-of production and is mailed out on a quarterly (seasonal) basis. In the future, the 
-newsletters will only be available from the website unless a homeowner 
-makes other arrangements for receiving it. For current and 
-previous issues, please visit the <a href="Newsletters.htm">newsletter</a> 
-page. </p>
-<p>&nbsp;</p>
-<p align="left" style="margin-bottom: 3px">
-<font color="#0000FF"><b>
-<font face="BernhardMod BT" size="4">Q.</font>&nbsp; How can I have an 
-item of interest published in the newsletter, directory or website?</b></font></p>
-<p align="left">
-You can contact the newsletter/website editor or any <a href="Board.htm">
-Board Member</a> and provide detailed information about your item of 
-interest. </p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+
+<dl class="faq">
+	<dt>What is the Twin Creeks Homeowners Association?</dt>
+	<dd><p>The Twin Creeks Homeowners Association (TCHOA) was part of the 
+	initial housing plan, incorporated by 
+	the developer to maintain the common areas, provide various services to 
+	residents and to control future architectural development. Membership 
+	in and payment of annual dues to TCHOA is mandatory for all homeowners. 
+	The <em>Declaration of Covenants and Restrictions for Twin Creeks</em> 
+	is part of the deed to each lot in Fieldstone and Brookstone.</p></dd>
+	
+	<dt>How much are the annual dues?</dt>
+	<dd><p>The annual dues are $321.00 payable every January 1.  Late fees are an 
+	additional $39.00</p></dd>
+
+	<dt>How are the dues spent?</dt>
+	<dd><p>The annual homeowner dues are used to 
+	cover such things as street lighting, mowing and landscaping of common 
+	areas, maintenance of retention ponds, maintenance of signage, common 
+	area fences and entrance structures, snow removal, insurance, common 
+	area property taxes and related administrative expenses.</p></dd>
+	
+	<dt>Is there a Board that handles the business of Twin Creeks Homeowners Association (TCHOA)?</dt>
+	<dd><p>Yes. The TCHOA Board of Directors are 
+	elected each year in May or June at the annual meeting of the homeowners 
+	association. Each position is strictly a volunteer commitment from 
+	fellow homeowners who are willing to dedicate their time and effort to 
+	ensure the proper handling of homeowner business.</p></dd>
+	
+	<dt>Are there any committees at Twin Creeks and how can I get involved?</dt>
+	<dd><p>Yes. The TCHOA welcomes the involvement of all residents. The current 
+	committees are as follows: Crime Watch, Architectural Review, Social 
+	Committee and Welcome Committee. In addition, we are looking for 
+	creative people to start various other neighborhood events, activities 
+	and clubs. Each of these committees are looking 
+	for volunteers who would like to participate. If you are interested 
+	please email the Board.</p>
+	<p align="center"><a href="mailto:president@teincreekshoa.com?subject=Committee Request"><img border="0" src="EmailButton.gif" width="97" height="35"></a></p>
+	</dd>
+	
+	<dt>How can I get more involved in my neighborhood?</dt>
+	<dd><p>You can run for a TCHOA Board position, volunteer for a committee or 
+	volunteer as a Block Capitan. Please contact any <a href="Board.htm">
+	Board Member</a> for more information.</p></dd>
+	
+	<dt>Is there a neighborhood newsletter and how frequently is it published?</dt>
+	<dd><p>Yes. The <b><i>Twin Creeks Connection</i></b> is in its second year 
+	of production and is mailed out on a quarterly (seasonal) basis. In the future, the 
+	newsletters will only be available from the website unless a homeowner 
+	makes other arrangements for receiving it. For current and 
+	previous issues, please visit the <a href="newsletters.html">newsletter</a> 
+	page.</p></dd>
+	
+	<dt>How can I have an item of interest published in the newsletter, directory or website?</dt>
+	<dd><p>You can contact the newsletter/website editor or any <a href="board.html">
+	Board Member</a> and provide detailed information about your item of 
+	interest.</p></dd>
+	
+</dl>
