Noting Charles Spencer is the Secretary.

--- a/board.html
+++ b/board.html
@@ -39,7 +39,7 @@ Directors</font></b></p>
 		<dt>Treasurer</dt>
 		<dd><b>Rod Coffee</b> (<a href="mailto:rodcof@att.net">rodcof@att.net</a>)</dd>
 		
-		<dt>Board Member</dt>
+		<dt>Secretary</dt>
 		<dd><b>Charles Spencer</b> (<a href="mailto:cspencer37@gmail.com">cspencer37@gmail.com</a>)</dd>
 	</dl>
 
