Tiny cleanup on About page.

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@ incorporated on January 21, 1993.</p>
 <p>Estridge developed our neighborhoods between 1992 and 
 1999. The concept was to build two distinct housing areas that shared an 
 expansive common area. The 121 homes of Brookstone 
-were carefully designed as single family homes, averaging in&nbsp; size from 
+were carefully designed as single family homes, averaging in size from 
 1200 to 1700 square feet. The developer wanted to take advantage of the 
 unique setting with its meandering streams and gently rolling terrain. 
 The muted exterior colors, the common design elements such as the peaked 
