Little cleanup on Board of Directors page.

--- a/board.html
+++ b/board.html
@@ -3,17 +3,11 @@ layout: inside
 category: board
 title: Board Members
 ---
-	&nbsp;<p align="center">
-<span style="text-transform: uppercase"><b>
-<font face="Verdana" size="4" color="#336699">Twin Creeks Homeowners 
-Association (TCHOA)</font></b></span></p>
-<p align="center">
-&nbsp;</p>
-<p align="center">
-&nbsp;</p>
-<p align="center"><b>
-<font face="Verdana" size="3" color="#336699">2012-2013 Board of 
-Directors</font></b></p>
+
+<div class="header banner">
+	<h2>Current TCHOA Board of Directors</h2>
+</div>
+
 <div align="center">
 	<table border="2" cellpadding="2" style="padding: 2px" bordercolordark="#999999" bordercolorlight="#999999">
 		<tr>
@@ -42,5 +36,6 @@ Directors</font></b></p>
 		<dt>Secretary</dt>
 		<dd><b>Charles Spencer</b> (<a href="mailto:cspencer37@gmail.com">cspencer37@gmail.com</a>)</dd>
 	</dl>
+</div>
 
 <p>We need volunteers for the Architectural, Social, and Crime Watch committees.  Please <a href="mailto:wyattsmt@aol.com?subject=TCHOA_Volunteer">email us</a> if you're interested in volunteering.</p>
