Adding Kevin Patterson's email address.

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Form</a></font></p>
 <p><font face="sans-serif" size="2">Contact information is as follows:</font></p>
 <p align="center"><font face="sans-serif" size="2">
 <a href="http://www.ekirkpatrick.com/">Kirkpatrick Management Company</a></font></p>
-<p align="center"><font face="sans-serif" size="2">Kevin Patterson 1-800-899-6652</font></p>
+<p align="center"><font face="sans-serif" size="2"><a href="mailto:kpatterson@ekirkpatrick.com">Kevin Patterson</a> 1-800-899-6652</font></p>
 <p align="center"><font face="sans-serif">A</font><font face="sans-serif" size="2">fter-hour 
 emergency number: 317-570-4358. </font></p>
 <p>&nbsp;</p>
