Moving Utilities subheader.

--- a/new-residents.html
+++ b/new-residents.html
@@ -12,7 +12,7 @@ Now that you have moved in, here is an assortment of information that
 may be helpful! </p>
 <p>&nbsp;</p>
 		<div align="left">
-			<img height="20" src="subheader-utilities.jpg" width="528"><p>&nbsp;</p>
+			<img height="20" src="images/subheader-utilities.jpg" width="528" alt="Utilities"><p>&nbsp;</p>
 			<table cellSpacing="0" cellPadding="0" width="829" border="0" bgcolor="#FFFFFF">
 				<tr>
 					<td vAlign="top" width="250" bgcolor="#FFFFFF" bordercolor="#FFFFFF">
