--- a/events.html
+++ b/events.html
@@ -185,7 +185,7 @@ if (fp_ie4()) {
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>
-<img border="0" src="lights07.gif" width="756" height="32"></p>
+<img border="0" src="images/lights07.gif" width="756" height="32"></p>
 <p>
 &nbsp;</p>
 <p align="left">
