moving newsletter example photo

--- a/newsletters.html
+++ b/newsletters.html
@@ -6,7 +6,7 @@ title: Newsletters
 <p align="left" style="margin-right: 100px">
 &nbsp;<p align="left" style="margin-right: 100px">
 <span style="text-transform: uppercase"><b>
-<font face="Verdana" size="3" color="#0000FF">Current Newsletter<img border="0" src="newsletter%20pic.jpg" width="250" height="320" align="right"></font></b></span><p align="left" style="margin-right: 100px">
+<font face="Verdana" size="3" color="#0000FF">Current Newsletter<img border="0" src="images/newsletter.jpg" width="250" height="320" align="right"></font></b></span><p align="left" style="margin-right: 100px">
 <p align="left" style="margin-left: 15px; margin-right: 100px">
 <b><a href="Newsletter%20Winter%202008.pdf">
 <font face="Verdana" size="2" color="#336699">Winter 2008 
