--- a/Events.htm
+++ b/Events.htm
@@ -311,7 +311,7 @@ Honorable mention was 6509 Stonecreek Court</font></p><p>&nbsp;</p>
 		<p>
 		&nbsp;</p>
 		<p>
-		<img border="0" src="j0335108.gif" width="76" height="77"><font size="3" face="Futura Md BT"> 
+		<img border="0" src="images/j0335108.gif" width="76" height="77"><font size="3" face="Futura Md BT"> 
 		6336 Sagewood Court</font></p>
 		<p>
 		Indianapolis Power and Light also want to thank you for your Holiday 
@@ -320,7 +320,7 @@ Honorable mention was 6509 Stonecreek Court</font></p><p>&nbsp;</p>
 		<p>
 		&nbsp;</p>
 		<p>
-		<img border="0" src="j0335108.gif" width="76" height="77"><font size="3" face="Futura Md BT">6250 
+		<img border="0" src="images/j0335108.gif" width="76" height="77"><font size="3" face="Futura Md BT">6250 
 		Sagewood Court</font></p>
 		<p>
 		This neighbor decorated the back of their house with the &quot;JOY&quot; and 
@@ -328,7 +328,7 @@ Honorable mention was 6509 Stonecreek Court</font></p><p>&nbsp;</p>
 		<p>
 		&nbsp;</p>
 		<p>
-		<img border="0" src="j0335108.gif" width="76" height="77"><font size="3" face="Futura Md BT">5034 
+		<img border="0" src="images/j0335108.gif" width="76" height="77"><font size="3" face="Futura Md BT">5034 
 		Bird Branch</font></p>
 		<p>
 		This neighbor's house welcomed you with beautiful decorations right as 
