--- a/events.html
+++ b/events.html
@@ -194,7 +194,7 @@ if (fp_ie4()) {
 <p>
 &nbsp;</p>
 <p>
-<img border="0" src="j0335108.gif" width="76" height="77"><font size="3" face="Futura Md BT"> 
+<img border="0" src="images/j0335108.gif" width="76" height="77"><font size="3" face="Futura Md BT"> 
 6336 Sagewood Court</font></p>
 <p>
 Indianapolis Power and Light also want to thank you for your Holiday 
@@ -203,7 +203,7 @@ next month!</p>
 <p>
 &nbsp;</p>
 <p>
-<img border="0" src="j0335108.gif" width="76" height="77"><font size="3" face="Futura Md BT">6250 
+<img border="0" src="images/j0335108.gif" width="76" height="77"><font size="3" face="Futura Md BT">6250 
 Sagewood Court</font></p>
 <p>
 This neighbor decorated the back of their house with the &quot;JOY&quot; and 
@@ -211,7 +211,7 @@ This neighbor decorated the back of their house with the &quot;JOY&quot; and
 <p>
 &nbsp;</p>
 <p>
-<img border="0" src="j0335108.gif" width="76" height="77"><font size="3" face="Futura Md BT">5034 
+<img border="0" src="images/j0335108.gif" width="76" height="77"><font size="3" face="Futura Md BT">5034 
 Bird Branch</font></p>
 <p>
 This neighbor's house welcomed you with beautiful decorations right as 
