--- a/index-old.html
+++ b/index-old.html
@@ -332,7 +332,7 @@ to maintain the appearance of the neighborhood our management company
 Kirkpatrick will be doing periodic walk-thrus of Brookstone and Fieldstone to 
 inspect our homes and lawns. Please click on the following link for additional 
 information.</font></p>
-<p><img border="0" src="home.gif" width="50" height="50" align="left"></p>
+<p><img border="0" src="images/home.gif" width="50" height="50" align="left"></p>
 <p>&nbsp;</p>
 <p><b><a href="Inspection%20Letter.pdf">TCHOA Home/Lawn Inspection Letter</a></b></p>
 <p>&nbsp;</p>
@@ -342,7 +342,7 @@ information.</font></p>
 <p><font face="sans-serif" size="2">Any residence architectural requests or 
 neighborhood maintenance issues should be directed to our new management 
 company, Kirkpatrick Management Company. </font></p>
-<p><img border="0" src="home.gif" width="50" height="50" align="left"></p>
+<p><img border="0" src="images/home.gif" width="50" height="50" align="left"></p>
 <p>&nbsp;</p>
 <p><font size="2"><a href="2009%20Arch%20Form.pdf">New Architectural Request 
 Form</a></font></p>
