--- a/About Us.htm
+++ b/About Us.htm
@@ -133,7 +133,7 @@ v:shapes="_x0000_s1026"></span><![endif]></p>
 		<!--msthemeseparator--><p align="center"><img src="fp_themes/ice174/bar.gif" width="320" height="4"></p>
 		<p align="left">
 		<span style="text-transform: uppercase"><b>
-		<font size="3" color="#336699">Who we ARE...</font></b></span><img border="0" src="home%201b%20copy.jpg" width="375" height="233" align="right"></p>
+		<font size="3" color="#336699">Who we ARE...</font></b></span><img border="0" src="images/fieldstone-home.jpg" width="375" height="233" align="right"></p>
 		<p>
 		<font size="2">Twin Creeks 
 		is a wonderful neighborhood located on the Northwest side of Indianapolis, 
