--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ title: About Us
 	<h2>~ Welcome Home! ~</h2>
 </div>
 
-<img border="0" src="home%201b%20copy.jpg" width="375" height="233" align="right" alt="">
+<img border="0" src="images/fieldstone-home.jpg" width="375" height="233" align="right" alt="">
 
 <h3>Who we are&hellip;</h3>
 
