moving utility icons

--- a/new-residents.html
+++ b/new-residents.html
@@ -25,7 +25,7 @@ may be helpful! </p>
 								<td vAlign="top" width="50">
 								<font face="Verdana">
 								<span style="text-transform: uppercase">
-								<img height="44" src="icon-electric.jpg" width="44"></span></font></td>
+								<img height="44" src="images/icon-electric.jpg" width="44"></span></font></td>
 								<td>
 								<span style="text-transform: uppercase">
 								<b><font face="Verdana" size="1">
@@ -48,7 +48,7 @@ may be helpful! </p>
 						<table cellSpacing="0" cellPadding="0" width="250" border="0">
 							<tr>
 								<td vAlign="top" width="50" height="49">
-								<img height="44" src="icon-water.jpg" width="44"></td>
+								<img height="44" src="images/icon-water.jpg" width="44"></td>
 								<td height="49"><b>
 								<font face="Verdana, Arial, Helvetica, sans-serif" size="1">
 								<a href="http://www.iwcr.com/USFIWSplash.aspx">INDIANAPOLIS WATER CO.</a></font></b><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><br>
@@ -73,7 +73,7 @@ may be helpful! </p>
 								<table cellSpacing="0" cellPadding="0" width="250" border="0">
 									<tr>
 										<td vAlign="top" width="50" height="49">
-										<img height="44" src="icon-phone.jpg" width="44"></td>
+										<img height="44" src="images/icon-phone.jpg" width="44"></td>
 										<td height="49"><b>
 										<font face="Verdana, Arial, Helvetica, sans-serif" size="1">
 										<a href="http://www.sbc.com">SBC</a></font></b><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><br>
@@ -101,7 +101,7 @@ may be helpful! </p>
 								<table cellSpacing="0" cellPadding="0" width="250" border="0">
 									<tr>
 										<td vAlign="top" width="50">
-										<img height="44" src="icon-gas.jpg" width="44"></td>
+										<img height="44" src="images/icon-gas.jpg" width="44"></td>
 										<td><b>
 										<font face="Verdana, Arial, Helvetica, sans-serif" size="1">
 										<a href="http://www.citizensgas.com">
@@ -131,7 +131,7 @@ may be helpful! </p>
 								<table cellSpacing="0" cellPadding="0" width="250" border="0">
 									<tr>
 										<td vAlign="top" width="50">
-										<img height="44" src="icon-tv.jpg" width="44"></td>
+										<img height="44" src="images/icon-tv.jpg" width="44"></td>
 										<td><font face="Verdana, Arial, Helvetica, sans-serif" size="1">
 										<b>
 										<a href="http://www.comcast.com">
