moving help wanted image

--- a/About Us.htm
+++ b/About Us.htm
@@ -191,7 +191,7 @@ v:shapes="_x0000_s1026"></span><![endif]></p>
 				<p align="left" style="margin-left: 3px">&nbsp;</p>
 				<p align="center" style="margin-left: 3px">
 				<a href="mailto:wyattsmt@aol.com?subject=Committees">
-				<img border="0" src="help%20wanted.jpg" width="100" height="61"></a></p>
+				<img border="0" src="images/help-wanted.jpg" width="100" height="61"></a></p>
 				<p style="margin-left: 3px">&nbsp;</td>
 			</tr>
 		</table>
