--- a/Events.htm
+++ b/Events.htm
@@ -588,7 +588,7 @@ Honorable mention was 6509 Stonecreek Court</font></p><p>&nbsp;</p>
 								<p>&nbsp;</p>
 								<p align="center">
 								<a title="Volunteers" href="mailto:wyattsmt@aol.com?subject=Committees">
-								<img border="0" src="help%20wanted.jpg" width="100" height="61"></a></p>
+								<img border="0" src="images/help-wanted.jpg" width="100" height="61"></a></p>
 								<h3><font face="Arial" color="#008080" size="3">
 								<b>&nbsp;&nbsp;&nbsp;<br>
 								Social Events</b></font></h3>
