--- a/Twin Creeks faq.htm
+++ b/Twin Creeks faq.htm
@@ -236,7 +236,7 @@ if(MSFPhover) { MSFPnav10n=MSFPpreload("fp_derived/Registration Page.htm_cmp_ice
 				<p align="left" style="margin-left: 3px">&nbsp;</p>
 				<p align="center" style="margin-left: 3px">
 				<a href="mailto:wyattsmt@aol.com?subject=Committees">
-				<img border="0" src="help%20wanted.jpg" width="100" height="61"></a></p>
+				<img border="0" src="images/help-wanted.jpg" width="100" height="61"></a></p>
 				<p style="margin-left: 3px">&nbsp;</p>
 				<p style="margin-left: 3px">&nbsp;</p>
 				<p style="margin-left: 3px">&nbsp;</p>
