--- a/events.html
+++ b/events.html
@@ -471,7 +471,7 @@ the following email links.</font></b></p>
 						<p>&nbsp;</p>
 						<p align="center">
 						<a title="Volunteers" href="mailto:wyattsmt@aol.com?subject=Committees">
-						<img border="0" src="help%20wanted.jpg" width="100" height="61"></a></p>
+						<img border="0" src="images/help-wanted.jpg" width="100" height="61"></a></p>
 						<h3><font face="Arial" color="#008080" size="3">
 						<b>&nbsp;&nbsp;&nbsp;<br>
 						Social Events</b></font></h3>
